fixing z-index at author picture

--- a/assets/style/1.body.css
+++ b/assets/style/1.body.css
@@ -15,7 +15,6 @@ body {
 	bottom:40px;
 	right:50px;
 	text-align:center;
-  z-index: 1;
 }
 
 @media screen and (min-width: 1024px) {
