--- a/assets/style/6.author.css
+++ b/assets/style/6.author.css
@@ -15,6 +15,7 @@
   max-height: 100%;
   object-fit: cover;
   clip-path: circle();
+  z-index: -1;
 }
 
 .author__name {
